RESOLVED FIXED95953
Regressions on 32-bit platforms with revisions 125637 and 126387
https://bugs.webkit.org/show_bug.cgi?id=95953
Summary Regressions on 32-bit platforms with revisions 125637 and 126387
Yuqiang Xian
Reported 2012-09-06 02:01:17 PDT
Take a look at awfy.com (http://arewefastyet.com/?runs=1000&view=regress&machine=11), there are two obvious performance regressions. The root cause is related to r125637, and it's further exposed in r126387. It's a typo in the baseline JIT compiler for op_get_by_val which causes the baseline JIT incorrectly falls back to the slow case. The value profiler knows the fact that the operation goes to the slow path, the DFG compiler then thinks it might clobber the world and the high level optimizations especially the local CSE are affected greatly. The fix should recover both regressions. My local test indicates 5% on SunSpider, 2% on v8 and 23% on Kraken. Patch forthcoming.
Attachments
patch (1.49 KB, patch)
2012-09-06 02:08 PDT, Yuqiang Xian
no flags
Performance result (32bit) (7.48 KB, text/plain)
2012-09-06 02:11 PDT, Yuqiang Xian
no flags
Yuqiang Xian
Comment 1 2012-09-06 02:08:51 PDT
Yuqiang Xian
Comment 2 2012-09-06 02:11:23 PDT
Created attachment 162454 [details] Performance result (32bit)
WebKit Review Bot
Comment 3 2012-09-06 12:53:50 PDT
Comment on attachment 162453 [details] patch Clearing flags on attachment: 162453 Committed r127778: <http://trac.webkit.org/changeset/127778>
WebKit Review Bot
Comment 4 2012-09-06 12:53:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.