Performance regressions on 32-bit platforms with revisions 125637 and 126387 https://bugs.webkit.org/show_bug.cgi?id=95953

Reviewed by Filip Pizlo.

* jit/JITPropertyAccess32_64.cpp:
(JSC::JIT::emit_op_get_by_val): Fix the typo.


Canonical link: https://commits.webkit.org/113879@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127778 268f45cc-cd09-0410-ab3c-d52691b4dbfc